# memum-activity-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  readme.md  test_db_function.sql
migrations/: 001_initial_schema.sql  003_add_sweep_cursor.sql  004_add_persistent_leaderboards.sql  005_add_head_texture.sql  006_milestones.sql  007_stat_deltas_xp_events.sql  008_hypixel_refresh_tracking.sql  011_daily_snapshots.sql  013_events.sql  014_event_stats.sql  015_event_xp.sql  016_persistent_event_leaderboards.sql  017_event_status_messages.sql  020_stat_type_changes.sql  022_add_display_count_to_event_leaderboards.sql  023_event_participents_table.sql
src/: bot.rs  config.rs  leaderboard_updater.rs  logging.rs  main.rs  permissions.rs
src/cards/: mod.rs
src/cards/leaderboard_card/: mod.rs
src/cards/level_card/: mod.rs
src/cards/statistics/: mod.rs
src/commands/: mod.rs  register.rs  stats.rs
src/commands/admin/: audit_users.rs  disqualify.rs  edit_events.rs  edit_stats.rs  force_register.rs  mod.rs  recalculate_xp.rs  set_nickname_registration_role.rs  set_register_role.rs  xp.rs
src/commands/events/: events.rs
src/commands/leaderboard/: helpers.rs  leaderboard.rs  leaderboard_create.rs  leaderboard_remove.rs  mod.rs
src/commands/logger/: logger.rs  logger_set.rs
src/commands/milestone/: milestone.rs
src/commands/registration/: mod.rs  register.rs  send_registration_message.rs  unregister.rs
src/commands/stats/: level.rs  mod.rs  statistics.rs  stats.rs
src/database/: mod.rs  models.rs  queries.rs
src/discord_stats/: mod.rs  tracker.rs
src/events/: events.rs
src/font/: example.ts  renderer.rs
src/hypixel/: client.rs  mod.rs  models.rs
src/leaderboard_card/: mod.rs
src/milestones/: mod.rs
src/points/: calculator.rs  mod.rs
src/shared/: cache.rs  mod.rs  types.rs
src/sweeper/: daily_snapshot.rs  hypixel_sweeper.rs  mod.rs  stat_sweeper.rs
src/utils/: event_leaderboard_updater.rs  mod.rs  stats_definitions.rs
src/xp/: calculator.rs
(+23 files in other folders)
