[package]
name = "memum-activity-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
futures = "0.3"
poise = "0.6.1"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid", "json"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "macros"] }
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.24", default-features = false }
base64 = "0.22.1"
chrono = "0.4.44"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
dashmap = "6"
